--- a/src/Frontend/HotelProject.WebUI/Views/Staves/Index.cshtml
+++ b/src/Frontend/HotelProject.WebUI/Views/Staves/Index.cshtml
@@ -1,8 +1,156 @@
-﻿
+﻿@model List<StaffViewModel>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
-<h1>Index</h1>
+<table class="table table-bordered">
+    <tr>
+        <th>#</th>
+        <th>Personel Adi</th>
+        <th>Personel Ünvan</th>
+        <th>Sil</th>
+        <th>Güncelle</th>
+        <th>Detaylar</th>
+    </tr>
+    
+    @foreach (var item in Model)
+    {
+        <tr>
+            <th>@item.Id</th>
+            <td>@item.Name</td>
+            <td>@item.Title</td>
+            <td><a href="#" class="btn mb-1 btn-rounded btn-outline-danger">Sil</a></td>
+            <td><a href="#" class="btn mb-1 btn-rounded btn-outline-success">Güncelle</a></td>
+            <td><a href="#" class="btn mb-1 btn-rounded btn-outline-dark">Detaylar</a></td>
+        </tr>
+    }
+</table>
+<a href="/Staves/AddStaff/" class="btn btn-info">Yeni Personel Girisi</a>
+
+
+@*<div class="col-lg-6">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Bordered Table</h4>
+            <div class="table-responsive">
+                <table class="table table-bordered verticle-middle">
+                    <thead>
+                        <tr>
+                            <th scope="col">Task</th>
+                            <th scope="col">Progress</th>
+                            <th scope="col">Deadline</th>
+                            <th scope="col">Label</th>
+                            <th scope="col">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Air Conditioner</td>
+                            <td>
+                                <div class="progress" style="height: 10px">
+                                    <div class="progress-bar gradient-1" style="width: 70%;" role="progressbar">
+                                        <span class="sr-only">70% Complete</span>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>Apr 20,2018</td>
+                            <td>
+                                <span class="label gradient-1 btn-rounded">70%</span>
+                            </td>
+                            <td>
+                                <span><a href="#" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-pencil color-muted m-r-5"></i> </a><a href="#" data-toggle="tooltip" data-placement="top" title="Close"><i class="fa fa-close color-danger"></i></a></span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Textiles</td>
+                            <td>
+                                <div class="progress" style="height: 10px">
+                                    <div class="progress-bar gradient-2" style="width: 70%;" role="progressbar">
+                                        <span class="sr-only">70% Complete</span>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>May 27,2018</td>
+                            <td>
+                                <span class="label gradient-2 btn-rounded">70%</span>
+                            </td>
+                            <td>
+                                <span><a href="#" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-pencil color-muted m-r-5"></i> </a><a href="#" data-toggle="tooltip" data-placement="top" title="Close"><i class="fa fa-close color-danger"></i></a></span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Milk Powder</td>
+                            <td>
+                                <div class="progress" style="height: 10px">
+                                    <div class="progress-bar gradient-3" style="width: 70%;" role="progressbar">
+                                        <span class="sr-only">70% Complete</span>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>May 18,2018</td>
+                            <td>
+                                <span class="label gradient-3 btn-rounded">70%</span>
+                            </td>
+                            <td>
+                                <span><a href="#" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-pencil color-muted m-r-5"></i> </a><a href="#" data-toggle="tooltip" data-placement="top" title="Close"><i class="fa fa-close color-danger"></i></a></span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Vehicles</td>
+                            <td>
+                                <div class="progress" style="height: 10px">
+                                    <div class="progress-bar gradient-4" style="width: 70%;" role="progressbar">
+                                        <span class="sr-only">70% Complete</span>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>Mar 27,2018</td>
+                            <td>
+                                <span class="label gradient-4 btn-rounded">70%</span>
+                            </td>
+                            <td>
+                                <span><a href="#" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-pencil color-muted m-r-5"></i> </a><a href="#" data-toggle="tooltip" data-placement="top" title="Close"><i class="fa fa-close color-danger"></i></a></span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Boats</td>
+                            <td>
+                                <div class="progress" style="height: 10px">
+                                    <div class="progress-bar gradient-9" style="width: 70%;" role="progressbar">
+                                        <span class="sr-only">70% Complete</span>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>Jun 28,2018</td>
+                            <td>
+                                <span class="label gradient-9 btn-rounded">70%</span>
+                            </td>
+                            <td>
+                                <span><a href="#" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-pencil color-muted m-r-5"></i> </a><a href="#" data-toggle="tooltip" data-placement="top" title="Close"><i class="fa fa-close color-danger"></i></a></span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Boats</td>
+                            <td>
+                                <div class="progress" style="height: 10px">
+                                    <div class="progress-bar gradient-2" style="width: 70%;" role="progressbar">
+                                        <span class="sr-only">70% Complete</span>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>Aug 20,2018</td>
+                            <td>
+                                <span class="label gradient-2 btn-rounded">70%</span>
+                            </td>
+                            <td>
+                                <span><a href="#" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-pencil color-muted m-r-5"></i> </a><a href="#" data-toggle="tooltip" data-placement="top" title="Close"><i class="fa fa-close color-danger"></i></a></span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>*@
 
