--- a/src/Frontend/HotelProject.WebUI/Views/AdminLayout/HeadPartial.cshtml
+++ b/src/Frontend/HotelProject.WebUI/Views/AdminLayout/HeadPartial.cshtml
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>API Hotel Admin Paneli 2</title>
+    <title>API Hotel Admin Paneli</title>
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="~/adminweb/images/favicon.png">
     <!-- Custom Stylesheet -->
