--- a/src/Frontend/HotelProject.WebUI/Views/Staves/AddStaff.cshtml
+++ b/src/Frontend/HotelProject.WebUI/Views/Staves/AddStaff.cshtml
@@ -1,4 +1,4 @@
-﻿@model AddStaffViewModel
+﻿@model StaffAddViewModel
 @{
     ViewData["Title"] = "AddStaff";
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
@@ -33,6 +33,6 @@
     <input type="text" asp-for="LinkedInLink" class="form-control"/>
     <br/>
     
-    <button class="btn btn-primary">Personel Ekle</button>
+    <button class="btn btn-outline-primary">Personel Ekle</button>
 </form>
 
