--- a/src/Frontend/HotelProject.WebUI/Views/AdminLayout/SideBarPartial.cshtml
+++ b/src/Frontend/HotelProject.WebUI/Views/AdminLayout/SideBarPartial.cshtml
@@ -3,8 +3,13 @@
         <ul class="metismenu" id="menu">
         <li class="nav-label">Dashboard</li>
         <li>
-            <a href="widgets.html" aria-expanded="false">
-                <i class="icon-badge menu-icon"></i><span class="nav-text">Widget</span>
+            <a href="/Staves/Index/" aria-expanded="false">
+                <i class="icon-person menu-icon"></i><span class="nav-text">Personeller</span>
+            </a>
+        </li>
+        <li>
+            <a href="/Testimonials/Index/" aria-expanded="false">
+                <i class="icon-person menu-icon"></i><span class="nav-text">Referanslar</span>
             </a>
         </li>
             <li>
