--- a/src/Frontend/HotelProject.WebUI/Views/Staves/Index.cshtml
+++ b/src/Frontend/HotelProject.WebUI/Views/Staves/Index.cshtml
@@ -13,21 +13,20 @@
         <th>Güncelle</th>
         <th>Detaylar</th>
     </tr>
-    
+
     @foreach (var item in Model)
     {
         <tr>
             <th>@item.Id</th>
             <td>@item.Name</td>
             <td>@item.Title</td>
-            <td><a href="#" class="btn mb-1 btn-rounded btn-outline-danger">Sil</a></td>
-            <td><a href="#" class="btn mb-1 btn-rounded btn-outline-success">Güncelle</a></td>
+            <td><a href="/staves/DeleteStaff/@item.Id" class="btn mb-1 btn-rounded btn-outline-danger">Sil</a></td>
+            <td><a href="/staves/UpdateStaff/@item.Id" class="btn mb-1 btn-rounded btn-outline-success">Güncelle</a></td>
             <td><a href="#" class="btn mb-1 btn-rounded btn-outline-dark">Detaylar</a></td>
         </tr>
     }
 </table>
 <a href="/Staves/AddStaff/" class="btn btn-info">Yeni Personel Girisi</a>
-
 
 @*<div class="col-lg-6">
     <div class="card">
