--- a/src/Frontend/HotelProject.WebUI/Views/AdminLayout/SideBarPartial.cshtml
+++ b/src/Frontend/HotelProject.WebUI/Views/AdminLayout/SideBarPartial.cshtml
@@ -4,12 +4,17 @@
         <li class="nav-label">Dashboard</li>
         <li>
             <a href="/Staves/Index/" aria-expanded="false">
-                <i class="icon-person menu-icon"></i><span class="nav-text">Personeller</span>
+                <i class="icon-notebook menu-icon"></i><span class="nav-text">Personeller</span>
             </a>
         </li>
         <li>
             <a href="/Testimonials/Index/" aria-expanded="false">
-                <i class="icon-person menu-icon"></i><span class="nav-text">Referanslar</span>
+                <i class="icon-lock menu-icon"></i><span class="nav-text">Referanslar</span>
+            </a>
+        </li>
+        <li>
+            <a href="/Service/Index/" aria-expanded="false">
+                <i class="icon-clock menu-icon"></i><span class="nav-text">Hizmetler</span>
             </a>
         </li>
             <li>
