--- a/src/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/src/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using HotelProject.WebUI.Models.Staff
 @using HotelProject.WebUI.Models.Testimonial
 @using HotelProject.WebUI.Dtos.ServiceDto
+@using HotelProject.WebUI.Dtos.AppUser
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
