--- a/src/Frontend/HotelProject.WebUI/Views/Register/Index.cshtml
+++ b/src/Frontend/HotelProject.WebUI/Views/Register/Index.cshtml
@@ -1,208 +1,8 @@
-﻿@using HotelProject.EntityLayer.Concretes.Enums
-@model CreateNewUserDto
-@{
-    Layout = null;
+﻿@{
+    ViewData["Title"] = "Home Page";
 }
 
-<!DOCTYPE html>
-<html class="h-100" lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Hotelier Giriş Paneli</title>
-    <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="~/adminweb/assets/images/favicon.png">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link href="~/adminweb/css/style.css" rel="stylesheet">
-
-
-
-</head>
-
-<body class="h-100">
-
-    <!--*******************
-        Preloader start
-    ********************-->
-    <div id="preloader">
-        <div class="loader">
-            <svg class="circular" viewBox="25 25 50 50">
-                <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="3" stroke-miterlimit="10" />
-            </svg>
-        </div>
-    </div>
-    <!--*******************
-        Preloader end
-    ********************-->
-
-    <div id="layoutAuthentication">
-        <div id="layoutAuthentication_content">
-            <main>
-                <div class="container" style="margin-bottom: 50px">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-7">
-                            <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                <div class="card-header" style="background-color: bisque">
-                                    <h1 class="text-center font-weight-light my-4"><b>Hotelier Giriş Paneli</b></h1>
-                                </div>
-                                <div style="background-color: azure">
-                                    <h4 class="text-center font-weight-light my-4">Yeni Hesap Oluştur</h4>
-                                </div>
-
-                                <div class="card-body" method="post" style="background-color: cornsilk">
-                                    <form asp-action="Index" id="form-user-add">
-                                        <div class="form-row">
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label class="small mb-1" for="inputFirstName">Adınız</label>
-                                                    <input class="form-control py-4" id="inputFirstName" type="text" placeholder="Isminizi giriniz" asp-for="FirstName" />
-                                                    <span class="text-danger" asp-validation-for="FirstName"></span>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label class="small mb-1" for="inputLastName">Soyadız</label>
-                                                    <input class="form-control py-4" id="inputLastName" type="text" placeholder="Soyisminizi giriniz" asp-for="LastName" />
-                                                    <span class="text-danger" asp-validation-for="LastName"></span>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="form-row">
-                                            <div class="col-md-6">
-                                                <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
-                                                <div asp-validation-summary="All" class="text-danger" id="validation-summary" aria-hidden="true" style="display: none"></div>
-                                                <div class="form-group">
-                                                    <label class="small mb-1" for="layoutAuthentication">Kullanıcı Adınız</label>
-                                                    <input class="form-control py-4" id="inputUsername" type="text" placeholder="Kullanıcı Adınızı giriniz" asp-for="Username" />
-                                                    <span class="text-danger" asp-validation-for="Username"></span>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label class="small mb-1" for="inputLastName">Cinsiyetiniz</label>
-                                                  @*  <input class="form-control py-4" id="inputGender" type="checkbox" placeholder="Cinsiyetinizi giriniz" asp-for="Gender" />  *@   <select class="form-control" asp-for="Gender" asp-items="@ViewBag.Gender"></select>
-                                                    <span class="text-danger" asp-validation-for="Gender"></span>
-                                                </div>
-                                            </div>
-                                        </div>
-
-
-
-                                        <div class="form-group">
-                                            <label class="small mb-1" for="inputEmailAddress">E-Posta Adresiniz</label>
-                                            <input class="form-control py-4" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="E-Posta Adresinizi giriniz" asp-for="Email" />
-                                            <span class="text-danger" asp-validation-for="Email"></span>
-                                        </div>
-
-
-                                        <div class="form-row">
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label class="small mb-1" for="inputPassword">Şifre</label>
-                                                    <input class="form-control py-4" id="inputPassword" type="password" placeholder="Şifrenizi giriniz" asp-for="Password" />
-                                                    <span class="text-danger" asp-validation-for="Password"></span>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label class="small mb-1" for="inputConfirmPassword">Şifre Tekrarı</label>
-                                                    <input class="form-control py-4" id="inputConfirmPassword" type="password" placeholder="Şifrenizi tekrar giriniz" asp-for="ConfirmPassword" />
-                                                    <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
-                                                </div>
-                                            </div>
-                                            @*     <div class="form-group col-md-6">
-                                            <label asp-for="ImageFile"></label>
-                                            <input type="file" accept="image/*" class="form-control-file" asp-for="ImageFile" placeholder="Lütfen, resim seçiniz."/>
-                                            <span class="text-danger" asp-validation-for="ImageFile"></span>
-                                            </div>*@
-                                        </div>
-                                        <div class="form-group mt-6 mb-0">
-                                            @*<button type="submit" class="btnRegister">Oluştur</button>*@
-                                            <button type="reset" class="btn btn-danger btn-block" data-dismiss="modal"><span class="fas fa-times"></span> Formu Temizle</button>
-                                            @*                                          <button type="button" class="btn btn-primary btn-block" id="btnSave"><span class="fas fa-save"></span> Kaydet</button>*@
-                                            <button type="submit" class="btn login-form__btn submit btn-block"><span class="fas fa-save"></span>Kayıt Ol</button>
-                                        </div>
-                                    </form>
-                                </div>
-                                <div class="card-footer text-center">
-                                    <p class="mt-2 login-form__footer">Bir hesabınız var mı? <a href="/Login/Index" class="text-primary"><b> Giriş Yap </b></a> şimdi</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </main>
-        </div>
-    </div>
-
-
-
-
-    @*    <div class="login-form-bg h-100">
-    <div class="container h-100">
-    <div class="row justify-content-center h-100">
-    <div class="col-xl-6">
-    <div class="form-input-content">
-    <div class="card login-form mb-0">
-    <div class="card-body pt-5">
-
-    <a class="text-center" href="index.html"> <h4>Hotelier Giriş Paneli</h4></a>
-
-    <form class="mt-5 mb-5 login-input" method="post">
-    <div class="form-group">
-    <input type="text" class="form-control" placeholder="Adınız" asp-for="FirstName">
-    <span asp-validation-for="FirstName" class="text-warning"></span>
-    </div>
-    <div class="form-group">
-    <input type="text" class="form-control" placeholder="Soyadınız" asp-for="LastName">
-    <span asp-validation-for="LastName" class="text-warning"></span>
-    </div>
-    <div class="form-group">
-    <input type="text" class="form-control" placeholder="Kullanıcı Adınız" asp-for="Username">
-    <span asp-validation-for="Username" class="text-warning"></span>
-    </div>
-    <div class="form-group">
-    <input type="email" class="form-control" placeholder="E-Mail adresiniz">
-    <span asp-validation-for="Email" class="text-warning"></span>
-    </div>
-    <div class="form-group">
-    <input type="password" class="form-control" placeholder="Şifreniz">
-    <span asp-validation-for="Password" class="text-warning"></span>
-    </div>
-    <div class="form-group">
-    <input type="password" class="form-control" placeholder="Şifre Tekrarı">
-    <span asp-validation-for="ConfirmPassword" class="text-warning"></span>
-    </div>
-    <button class="btn login-form__btn submit w-100">Kayıt Ol</button>
-    </form>
-    <p class="mt-5 login-form__footer">Bir hesabınız var mı <a href="/Login/Index" class="text-primary">Giriş Yap </a> şimdi</p>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>*@
-
-
-
-
-
-    <!--**********************************
-        Scripts
-    ***********************************-->
-    <script src="~/adminweb/plugins/common/common.min.js"></script>
-    <script src="~/adminweb/js/custom.min.js"></script>
-    <script src="~/adminweb/js/settings.js"></script>
-    <script src="~/adminweb/js/gleek.js"></script>
-    <script src="~/adminweb/js/styleSwitcher.js"></script>
-</body>
-</html>
-
-
-
-
-
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
