--- a/src/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/src/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
 ﻿@using HotelProject.WebUI
-@using HotelProject.WebUI.Models
-@using HotelProject.WebUI.Models.Staff
-@using HotelProject.WebUI.Models.Testimonial
+@using HotelProject.WebUI.ViewModels
+@using HotelProject.WebUI.ViewModels.Staff
+@using HotelProject.WebUI.ViewModels.Testimonial
 @using HotelProject.WebUI.Dtos.ServiceDto
-@using HotelProject.WebUI.Dtos.AppUser
+@using HotelProject.WebUI.ViewModels.AppUser
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
