--- a/src/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/src/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using HotelProject.WebUI.ViewModels.Testimonial
 @using HotelProject.WebUI.Dtos.ServiceDto
 @using HotelProject.WebUI.ViewModels.AppUser
+@using HotelProject.EntityLayer.Concretes.Enums
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
